src/test/resources/all/issues/silver/0050.sil
field f: Int
//:: ExpectedOutput(typechecker.error)
field x: Int

method test1(x: Ref)
  requires acc(x.x) // error: expected field
{}

method test2(x: Ref)
  requires acc(x.f) // no error
{}
